--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
       <script src="sketch.js"></script>
       <script src="dustbin.js"></script>
       <script src="ground.js"></script>
-    </head>
+      <script src="Paper.js"></script>
+      </head>
     <body>
     </body>
   </html>
